--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,7 +156,7 @@ tbody {
 }
 
 .header-top:not(.banner) {
-  background-color: #d32f2f;
+  background-color: #29a4a5;
   border-bottom: 1px solid #d32f2f;
   padding: 4px 0;
 }
@@ -5661,7 +5661,7 @@ fieldset[disabled] .form-control {
 .header .navbar-nav .active.show > .nav-link,
 .header .navbar-nav li.show .nav-link.active {
   background-color: #ffffff;
-  border-bottom-color: #ffffff;  
+  border-bottom-color: #ffffff;
   border-right: 1px solid #f5f5f5;
   border-left: 1px solid #f5f5f5;
   z-index: 106;
